<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FMIRAtings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="drawer_items">
        <item>Начало</item>
        <item>Курсове</item>
        <item>Преподаватели</item>
        <item>Изход</item>
    </string-array>

    <!-- Comments for teacher-->
    <string name="author">Автор</string>
    <string name="date">Дата</string>
    <string name="add_commnet">Добави коментар</string>
    <string name="clarity">Яснота</string>
    <string name="enthusiasm">Ентусиазъм</string>
	<string name="evaluation">Оценяване</string>
	<string name="speed">Скорост на преподавяне</string>
	<string name="scope">Обхват на материала</string>
	<string name="comment">Коментар</string>
	<string name="vote">Гласувай</string>
    <string name="add_rating">Вашият кометар и оценка са много важни за нас. така се следи кой курсове са най-полезни и посещавани.</string>
    
    <!-- Comments for courses-->
    <string name="workload">Натоваренос</string>
	<string name="interest">Колко е интересен курса</string>
	<string name="simplicity">Сложност на курса</string>
	<string name="usefulness">Полезност на материала</string>
    
    <!-- Login/Register -->
    <string name="email">Имейл</string>
    <string name="password">Парола</string>
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="confirm_password">Потвърдете пролата</string>
    <string name="name">Име</string>
    <string name="user_name">Потребителско име</string>
    <string name="course">Курс</string>
    <string name="specialty">Специалност</string>
    <string name="group">Група</string>
    <string name="graduation_date">Дата на завършване</string>
    <string name="title_activity_login">LoginActivity</string>
	<string name="department">Катедра</string>
	<string name="courses">Курсове</string>
	<string name="comments">Коментари</string>
	<string name="category">Категория</string>
	<string name="votes">Оценки</string>
    
    <!-- Teachers -->
    <!-- Course -->
    <string name="teachers">Учители</string>
   	<string name="materials">Материали</string>
    
</resources>