<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="@dimen/app_margin_big">
    
	<TextView
        android:id="@+id/course_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

   <TextView
        android:id="@+id/course_category_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textStyle="bold"
         />
    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/teachers_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teachers" />

    <Button
        android:id="@+id/comments_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comments" />

    <Button
        android:id="@+id/vote_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vote" />
    
</LinearLayout>
