<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/add_rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/add_rating" />

            <TextView
                android:id="@+id/clarity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/clarity" />

            <RatingBar
                android:id="@+id/clarity_rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states"
                android:rating="0" />

            <TextView
                android:id="@+id/workload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/workload" />

            <RatingBar
                android:id="@+id/workload_rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states"
                android:rating="0" />

            <TextView
                android:id="@+id/interest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/interest" />

            <RatingBar
                android:id="@+id/interest_rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states"
                android:rating="0" />
            
             <TextView
                android:id="@+id/simplicity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/simplicity" />

            <RatingBar
                android:id="@+id/simplicity_rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states"
                android:rating="0" />
            
            <TextView
                android:id="@+id/usefulness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_big"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/usefulness" />

            <RatingBar
                android:id="@+id/usefulness_rating"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states"
                android:rating="0" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <EditText
            android:id="@+id/editComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/add_commnet"
            android:imeOptions="actionSend"
            android:inputType="textAutoCorrect"
            android:lines="1"
            android:textColor="#999999"
            android:textColorHint="#999999"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/commentArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:contentDescription="@drawable/comment_arrow"
            android:paddingLeft="10dp"
            android:src="@drawable/comment_arrow" />
    </LinearLayout>

</RelativeLayout>