<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" 
             android:isScrollContainer="false">

            <TextView
                android:id="@+id/add_rating_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/add_rating" />

            <TextView
                android:id="@+id/clarity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/clarity" />

            <RatingBar
                android:id="@+id/clarity_rating"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:clickable="true"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states" />

            <TextView
                android:id="@+id/enthusiasum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/enthusiasm" />

            <RatingBar
                android:id="@+id/enthusiasum_rating"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:clickable="true"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states" />

            <TextView
                android:id="@+id/evaluation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/evaluation" />

            <RatingBar
                android:id="@+id/evaluation_rating"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:clickable="true"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_small"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/speed" />

            <RatingBar
                android:id="@+id/speed_rating"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:clickable="true"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states" />

            <TextView
                android:id="@+id/scope"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/app_margin_big"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/scope" />

            <RatingBar
                android:id="@+id/scope_rating"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:clickable="true"
                android:numStars="5"
                android:progressDrawable="@drawable/review_ratings_stars_states" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="10dp" >

        <EditText
            android:id="@+id/editComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/add_commnet"
            android:imeOptions="actionSend"
            android:inputType="textAutoCorrect"
            android:lines="1"
            android:textColor="#999999"
            android:textColorHint="#999999"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/commentArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:contentDescription="@drawable/comment_arrow"
            android:paddingLeft="10dp"
            android:src="@drawable/comment_arrow" />
    </LinearLayout>

</RelativeLayout>